tests/e2e/object_assign_null2.error
Error: syntax error in story at line 3, column 9

3|            r = null
              ^^^^^^^^

E0100: Can't assign `null` to `Object`
