tests/e2e/object_assign_null2.story
http server as server
    when server listen path: "/" as r
        r = null
